fixes and project structure changes

--- a/SampleData.Library/SampleData.Library.csproj
+++ b/SampleData.Library/SampleData.Library.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="resources\LorenIpsum.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>LorenIpsum.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="resources\LorenIpsum.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>LorenIpsum.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
